# hercules

./: .gitignore  CMakeLists.txt  DEPLOYMENT.txt  Dockerfile  Makefile  README.md  TODO  a.out  clients  kk.cpp  package.py  stat_servers
CMake/: FindFUSE.cmake  FindLog4cxx.cmake  FindPCRE.cmake
app/: CMakeLists.txt  client.c  collective_write.c  dirr.c  dummy.c  getdatalocation.c  gtype_gdeployed.c  original_overhead.c  release_imss.c  server.c
app/collective_write/: deployfile  deploystat
bash/: .gitignore  BEEGFS_IOR_TEST.SH  DeploymentTimeSlurm.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE_BLOCK_SIZE.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE_WEAK_SCALABILITY.sh  IMSS_IOR_TEST_MALL.sh  IMSS_IOR_TEST_NO_MALL.sh  IMSS_IOR_TEST_NO_MALL_ATTACHED.sh  IMSS_IOR_TEST_NO_MALL_DETACHED.sh  IMSS_IOR_TEST_STRONG_DISTRIBUTED.sh  IORTestSlurm.sh  IOR_TEST.sh  LUSTRE_IOR_TEST.sh  OFSET-FILE-TEST.c  SandboxTest.sh  WRITE-AND-READ-TEST-BIFURCADO.c  WRITE-AND-READ-TEST.c  adaptative_blocks.sh  c_bash.sh  c_slurm.sh  check-servers.sh  client_hostfile  collective_write.sh  data_hostfile  exportHerculesIORSummary.sh  exportHerculesNek5000Summary.sh  exportIORSummary.sh  hercules  hercules.sh  hostfile  individual_write.sh  init_imss.sh  init_imss_stat.sh  ior_beegfs_slurm.sh  ior_hercules_slurm.sh  ior_lustre_slurm.sh  meta_hostfile  metadata.sh  metadata_measure.sh  (+24 more)
bash/adaptative_blocks/: deployfile
bash/collective_write/: imsshostfile
bash/gcloud_scripts/: register.sh  sequential-cmd.sh  update.sh
bash/individual_write/: deployfile
bash/metadata_measure/: deployfile
bash/small_blocks/: deployfile
bash/tests/: OPEN-READ.f90  OPENAT_TEST.c
conf/: 1s-10nfc-10cpd.conf  1s-10nfc-1cpd.conf  1s-1nfc-10cpd.conf  1s-1nfc-1cpd.conf  1s-1nfc-2cpd.conf  1s-2nfc-1cpd.conf  1s-2nfc-2cpd.conf  hercules-template.conf  hercules-template.conf._TEMP  hercules.conf  hercules.conf.sample
demo/: Dockerfile.client  Dockerfile.servers
fuse/: CMakeLists.txt  imss.c  imss_fuse_api.c  imss_fuse_api.h  imss_posix_api.c  imss_posix_api.h  imssfs.c  map.cpp  map.hpp  mapprefetch.cpp  mapprefetch.hpp
hostfiles/: servers
inc/: comms.h  crc.h  directory.h  hercules.h  imss.h  imss_data.h  memalloc.h  p_argv.h  policies.h  records.hpp  stat.h  th_workers.h  workers.h
include/: arg_parser.h  cfg_parse.h  comms.h  directory.h  flags.h  hello_world_util.h  hercules.h  imss.h  map_ep.hpp  map_server_eps.hpp  memalloc.h  metadata_stat.h  policies.h  queue.h  records.hpp  resolvepath.h  slog.h  tempname.h  ucp_util.h  workers.h
releases/download/v1.0/: imss.tgz
scripts/: check-servers.sh  hercules
scripts/spack/hercules/: package.py
spack/: repo.yaml
src/: .workers.c.swp  arg_parser.c  buff_workers.c  buffer.c  cfg_parse.c  client.c  comms.c  crc.c  directory.c  hercules.c  imss.c  map_ep.cpp  map_server_eps.cpp  memalloc.c  policies.c  queue.c  records.cpp  release_imss.c  server.c  slog.c  stat.c  stat.cpp  stat_server.c  stat_workers.c  workers.c
test/: ucp_hello_world.c
tools/: CMakeLists.txt  flags.c  imss_posix.c  kk.c  mapdir.cpp  mapdir.hpp  mapfd.cpp  mapfd.hpp  mount.c  resolvepath.c  umount.c
usecases/lifesciences/: hercules_torino-2server-2process-in-2node-attach.conf  run_app_hercules.sh
usecases/quantumespresso/: hercules_torino-8servers-512process-in-16node-attached.conf  ph_hercules.in  slurm_qe_hercules.sh
usecases/remotesensing/: README.md  hercules_torino-1server-1process-in-1node-attached.conf  jobscript_juwels_tf2module_hvd-modified-cascadalake_hercules.sh
vendors/libzmq/lib/: libzmq.so.5.1.6
