cmake_minimum_required(VERSION 3.1)

SET(PROJECT_NAME_STR IMSS)
SET(ZMQ_INC "-I${PROJECT_SOURCE_DIR}/vendors/libzmq/include")
SET(ZMQ_LIB "-L${PROJECT_SOURCE_DIR}/vendors/libzmq/lib")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)


set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMake)

PROJECT (${PROJECT_NAME_STR} C CXX)

find_package(PCRE)

include(FindPkgConfig)
pkg_check_modules(GLIB glib-2.0 REQUIRED)
include_directories(${GLIB_INCLUDE_DIRS})

link_directories("/usr/lib/x86_64-linux-gnu/")

find_package(
            MPI
            COMPONENTS C
            OPTIONAL_COMPONENTS
            )


if (MPI_FOUND)
    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
else (MPI_FOUND)
    message(SEND_ERROR "This application cannot compile without MPI")
endif (MPI_FOUND)

FIND_PACKAGE(Threads REQUIRED)


INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR}/inc" )
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/build/app")

FILE(GLOB HEADERS "inc/*")
SOURCE_GROUP(include FILES ${HEADERS})
SET(CMAKE_SUPPRESS_REGENERATION TRUE)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

SET(CMAKE_CXX_FLAGS  " ${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")

ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(fuse)
ADD_SUBDIRECTORY(tools)
